--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 kotlin.code.style=official
+ktor_version=2.3.10
+kotlin_version=1.9.24
+logback_version=1.4.14
+exposed_version = 0.41.1
+h2_version = 2.2.224
