Unique username fix

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ ktor:
 
 jwt:
   secret: "secretsweatsecretsketch"
+  refreshSecret: "refreshsecretsweatsecretsketchrefresh"
   issuer: "http://0.0.0.0:8080/"
   audience: "http://0.0.0.0:8080/hello"
   realm: "Access to SweatSketch service"
