Update code structure. Add tables for workout templates. Update token generation and validation

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ ktor:
       - pro.aibar.sweatsketch.ApplicationKt.mainModule
       - pro.aibar.sweatsketch.ApplicationKt.userModule
       - pro.aibar.sweatsketch.ApplicationKt.authModule
+      - pro.aibar.sweatsketch.ApplicationKt.workoutModule
 
 
 jwt:
